# clinic-system

./: .env.example  .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  Caddyfile  Makefile  RFC-001-Sistema-Clinico.md  docker-compose.yml
docs/architecture/: ADR-001-backend-language.md  ADR-002-database-encryption.md  ADR-003-cloud-vs-local.md  ADR-004-ai-microservice.md  ADR-005-frontend-framework.md  ADR-006-outbox-pattern.md  C4-architecture.md  README.md
docs/data-models/: schema.md
docs/security/: blind-variables.md
scripts/: backup.sh
services/ai-service/: Dockerfile  pyproject.toml
services/ai-service/src/ai_service/: config.py  main.py  worker.py
services/ai-service/src/ai_service/anonymization/: ner.py
services/ai-service/src/ai_service/drafts/: claude.py
services/ai-service/src/ai_service/transcription/: whisper.py
services/core-api/: .air.toml  Dockerfile  go.mod  go.sum  sqlc.yaml
services/core-api/cmd/api/: app.go  main.go  routes.go
services/core-api/internal/auth/: domain.go  errors.go  handler.go  hash.go  models.go  repository.go  service.go
services/core-api/internal/auth/dto/: request.go
services/core-api/internal/auth/handler/: errors.go  handler.go  helpers.go  ports.go  reader.go  routes.go  writer.go
services/core-api/internal/auth/repository/: audit.go  find.go  helpers.go  repository.go  write.go
services/core-api/internal/patients/: domain.go  errors.go  models.go  repository.go
services/core-api/migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql
(+38 files in other folders)
